--- a/resources/sass/3.modules/_card.scss
+++ b/resources/sass/3.modules/_card.scss
@@ -1,7 +1,7 @@
 /* card */
 .card {
     overflow: hidden;
-    border: none;
+    // border: none;
     perspective: 10px;
     transition: all .3s ease-in-out;
     margin-bottom: 1rem;
@@ -12,10 +12,6 @@
     }
     .card-image {
         @include element-mb-0;
-        position: relative;
-        &::before{
-            @include bg-overlay;
-        }
     }
     .card-body {
         @include element-mb-0;
@@ -27,217 +23,7 @@
         border: none;
         background-color: #efefef;
     }
-    .tag {
-        // position: absolute;
-        // transform: translateX(-50%);
-        // top: -1rem;
-        // left: 50%;
-        // background-color: $primary_light;
-        // color: #ffffff;
-        // padding: .25rem .5rem;
-        // border-radius: .25rem;
-        color: $dark_gray;
-        display: inline-block;
-        font-size: .9rem;
-        margin-bottom: .5rem;
-        font-size: 90%;
-        font-weight: 600;
-    }
     &:hover{
         @include box-shadow;
-        .card-image{
-            &::before,
-            .card-option {
-                opacity: 1;
-                visibility: visible;
-            }
-        }
-    }
-}
-
-
-.plant-card,
-.pot-card{
-    &::before,
-    .card-option {
-        opacity: 0;
-        visibility: hidden;
-        transition: all .3s ease-in-out;
-    }
-
-    &:hover{
-        @include box-shadow;
-        transform: none;
-        .card-image{
-            a{
-                img{
-                    &.back-img{
-                        opacity: 1;
-                        visibility: visible;
-                    }
-                }
-            }
-        }
-    }
-
-    .plant-name,
-    .pot-name{
-        font-size: 1.2rem;
-    }
-
-    .card-image{
-        position: relative;
-        &::before{
-            display: none;
-        }
-        a{
-            position: static;
-            text-align: center;
-            display: block;
-            img{
-                object-fit: cover;
-                height: 350px;
-                width: 100%;
-                &.back-img{
-                    @include default-transition;
-                    opacity: 0;
-                    visibility: hidden;
-                    position: absolute;
-                    left: 0;
-                    top: 0;
-                }
-            }
-        }
-    }
-    
-    .card-option{
-        display: none;
-        @include reset-list;
-        position: absolute;
-        top: 1rem;
-        right: 1rem;
-        li{
-            margin-bottom: .5rem;
-            &:first-child{
-                display: none;
-            }
-        }
-        .light-btn{
-            padding: 0;
-            width: 48px;
-            height: 48px;
-            line-height: 48px;
-            text-align: center;
-            &:hover{
-                background-color: $primary_color;
-            }
-        }
-    }
-
-    .card-footer{
-        border-radius: 0;
-        padding: 1rem;
-        border: none;
-        @include element-mb-0;
-        .plant-price,
-        .pot-price{
-            font-size: 1.1rem;
-            font-weight: 600;
-            margin-bottom: 0;
-        }
-        
-    }
-}
-
-.original-price{
-    color: $dark_gray;
-    padding-right: .25rem;
-    text-decoration: line-through;
-}
-.discount-rate{
-    color: $green;
-    font-weight: 600;
-}
-
-@media only screen and (max-width:1199px) {
-    .card{
-        .card-image {
-            img {
-                max-height: 400px;
-                object-fit: cover;
-            }
-        }
-    }
-}
-
-@media only screen and (max-width:767px) {
-    .card {
-        .card-image{
-            border-bottom: none;
-        }
-        .card-body{
-            .tag{
-                position: static;
-                transform: none;
-            }
-        }
-    }
-
-    .plant-card,
-    .pot-card{
-        &:hover{
-            .card-image{
-                a{
-                    img{
-                        &.back-img{
-                            display: none;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-
-@media only screen and (max-width:575px) {
-    .card {    
-        .card-image{
-            .card-option {
-                opacity: 1;
-                visibility: visible;
-                .light-btn{
-                    width: 40px;
-                    height: 40px;
-                    line-height: 40px;
-                }
-            }
-        }    
-        .light-btn {
-            background-color: transparentize($primary_color, .2);
-            color: #ffffff;
-        }
-        .card-body{
-            padding: .5rem;
-        }
-        &:hover {
-            transform: none;
-        }
-    }
-    .plant-card,
-    .pot-card{
-        .card-image{
-            a{
-                img{
-                    height: 200px;
-                }
-            }
-        }
-        .card-footer{
-            .secondary-btn{
-                span{
-                    display: none;
-                }
-            }
-        }
     }
 }
