--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -66,6 +66,7 @@
 
 @import "4.pages/blog";
 
+@import "3.modules/mobile-page";
 @import "3.modules/card";
 @import "3.modules/back-to-top";
 @import "3.modules/search-bar";
@@ -85,7 +86,7 @@
 
 /* product page */
 
-@import "4.pages/product";
+@import "4.pages/product-page";
 
 /* contact page */
 
