--- a/resources/sass/0.helper/_mixin.scss
+++ b/resources/sass/0.helper/_mixin.scss
@@ -7,6 +7,7 @@
     text-rendering: auto;
     line-height: 1;
     font-family: "Font Awesome 5 Free";
+    font-weight: 900;
 }
 
 @mixin reset-list {
