--- a/resources/sass/1.base/_reset.scss
+++ b/resources/sass/1.base/_reset.scss
@@ -1,117 +1,81 @@
-.social-icons{
-    font-size: 0;
-    .list-inline-item {
-        margin-right: 0;
-        text-align: center;
-        a{
-            // line-height: 3rem;
-            display: block;
-            font-size: 1rem;
-            padding: 0.5rem .75rem;
-        }
-    }
-}
-
-.modal-content{
+.modal-content {
     border-radius: 0;
 }
 
-.overlay{
+.overlay {
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    padding-left: 5px;
-    padding-left: 17px;
-    background-color: transparentize($text_color, .5);
+    padding-right: 17px;
+    background-color: transparentize($text_color, 0.5);
     opacity: 0;
     visibility: hidden;
-    z-index: 2000;
+    z-index: 9;
     @include default-transition;
-    &.show{
+    &.show {
         opacity: 1;
         visibility: visible;
     }
 }
 
 .breadcrumb-wrapper {
-    &.style-1{
-        background-color: $gray;
-        padding: 10rem 0 3rem;
-        background-size: cover;
-        background-position: bottom;
-        // color: #ffffff;
-        position: relative;
-        font-family: $heading_font;
+    background-color: $gray;
+    padding: 3rem 0;
+    position: relative;
 
-        &::before {
-            @include bg-overlay;
-            background-image: radial-gradient(transparentize($secondary_color, .8), rgba(29, 29, 29, 0.1));
-            z-index: 0;
-        }
-
-        .breadcrumb {
-            background-color: transparent;
-            margin-bottom: 0;
-            // justify-content: center;
-            font-size: 1.5rem;
-            padding: 0;
-        }
-
-        .breadcrumb-item+.breadcrumb-item::before {
-            color: inherit;
-            content: ">";
-        }
-
-        .breadcrumb-item.active {
-            // color: $primary_light;
-            color: $primary_color;
-        }
+    .title-page {
+        font-size: 2rem;
+        margin-bottom: 0;
     }
-    &.style-2{
-        background-color: $gray;
-        .breadcrumb {
-            background-color: transparent;
-            margin-bottom: 0;
-        }
+
+    .breadcrumb {
+        background-color: transparent;
+        margin-bottom: 0;
+        font-size: 1rem;
+        padding: 0;
+        line-height: 1;
+        @include element-mb-0;
     }
+
+    // .breadcrumb-item+.breadcrumb-item::before {
+    //     color: inherit;
+    //     content: ">";
+    // }
 }
 
 /* lightbox */
-.lightgallery{
+.lightgallery {
     margin-bottom: 0;
-    li{
+    li {
         display: inline-block;
         vertical-align: top;
         margin-bottom: 1rem;
-        margin-right: 1rem;
+        margin-right: 0.5rem;
         max-width: 80px;
         cursor: pointer;
     }
 }
 
-.media{
-    & > a{
+.media {
+    & > a {
         margin-right: 1rem;
     }
-    .button{
+    .button {
         margin-right: 0;
     }
-    .media-body{
+    .media-body {
         @include element-mb-0;
     }
 }
 
-.primary-text{
-    color: $primary_color;
-}
-.primary-light-text{
-    color: $primary_light;
-}
-.secondary-text{
-    color: $secondary_color;
-}
-.gray-text{
-    color: $dark_gray;
+@media only screen and (max-width: 767px) {
+    .breadcrumb-wrapper {
+        display: none;
+        padding-top: 1.5rem;
+        .breadcrumb {
+            display: none;
+        }
+    }
 }
